force-app/main/default/objects/Customer_Care_Campaign__c/Customer_Care_Campaign__c.object-meta.xml
<CustomObject>
    <label>Customer Care Campaign</label>
    <nameField>
        <label>Recall Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Care Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>