force-app/main/default/objects/Customer_Care_Campaign__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipName>Recall_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>