force-app/main/default/objects/Customer_Care_Campaign__c/fields/Campaign_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Completion_Date__c</fullName>
    <label>Campaign Completion Date</label>
    <type>Date</type>
</CustomField>