force-app/main/default/objects/Customer_Care_Campaign__c/fields/Campaign_Number__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Number__c</fullName>
    <label>Campaign Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>