force-app/main/default/objects/Customer_Care_Campaign__c/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Field Service Campaign</fullName>
            </value>
            <value>
                <fullName>Safety Recall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>