force-app/main/default/objects/Customer_Care_Campaign__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Customer Care Campaigns</relationshipLabel>
    <relationshipName>Customer_Care_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>