force-app/main/default/objects/Customer_Care_Campaign__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>