force-app/main/default/objects/Customer_Care_Campaign__c/fields/Parts_Status__c.field-meta.xml
<CustomField>
    <fullName>Parts_Status__c</fullName>
    <label>Parts Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backorder</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>