force-app/main/default/objects/Customer_Care_Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Campaign_Number__c</columns>
    <columns>Campaign_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>